# ecpcgrading

./: CHANGELOG.md  pyproject.toml
src/ecpcgrading/: __init__.py  assignments.py  canvas.py  config.py  grading_tool.tcss  students.py  tasks.py  tui.py
src/nsp2grading/: canvas.py  cli.py  config.py  default_config.toml  grading_tool.css  init.zsh  tasks.py  tui.py
tests/: test_ecpcgrading.py  test_nsp2grading.py
