[tool.poetry]
name = "ecpcgrading"
version = "0.1.0"
description = ""
authors = ["David Fokkema <davidfokkema@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.0.3"
tomlkit = "^0.7.2"
rich = "^13.4.2"
textual = "^0.35.1"
pydantic = "^2.1.1"
python-slugify = "^8.0.1"
canvas-course-tools = "^0.6.2"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
textual-dev = "^1.1.0"
faker = "^19.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
grading = "nsp2grading.cli:cli"
