[tool.poetry]
name = "ecpcgrading"
version = "1.0.2"
description = "Code grading tool for ECPC"
authors = ["David Fokkema <davidfokkema@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
tomlkit = "^0.7.2"
rich = "^13.4.2"
textual = "^0.83.0"
pydantic = "^2.1.1"
python-slugify = "^8.0.1"
canvas-course-tools = "^0.11.0"
unidecode = "^1.3.7"
tomli = { version = "^2.0.1", python = '<3.11' }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
textual-dev = "^1.6.1"
faker = "^19.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ecpcgrading = "ecpcgrading.tui:app"
