[project]
name = "ecpcgrading"
version = "1.4.0"
description = "Code grading tool for ECPC"
readme = "README.md"
authors = [{ name = "David Fokkema", email = "davidfokkema@icloud.com" }]
requires-python = ">=3.10"
dependencies = [
    "canvas-course-tools>=0.12.0",
    "click>=8.1.8",
    "humanize>=4.11.0",
    "pydantic>=2.10.6",
    "python-slugify>=8.0.4",
    "textual>=2.1.0",
    "tomli>=2.2.1 ; python_full_version < '3.11'",
    "unidecode>=1.3.8",
]

[project.scripts]
ecpcgrading = "ecpcgrading.tui:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["textual-dev>=1.7.0"]
